--- a/awards.html
+++ b/awards.html
@@ -38,6 +38,26 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<!--<h2 style="font-style:italic;" id="awards">&nbsp;</h2>--><table>
 									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Jan. 2018<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
+										in <i>IEEE Access</i>.<br>
+										(Invited by: Dr. Mehul S. Raval, IEEE Access Associate Editor).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Jul. 2017<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
+										in <i>Imaging Science Journal</i>.<br>
+										(Invited by: Dr. Mark A Richardson, Chief Editor, Imaging Science Journal).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Sept. 2015<br>
 										</b>
 										</td>
