--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Phone:</b></td>
-													<td>+91-120-4610200</td>
+													<td>+91-120-4610231</td>
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Email:</b></td>
-													<td><a href="mailto:milind.padalkar@gmail.com">milind.padalkar@gmail.com</a></td>
+													<td>milindp[at]vehant[dot]com,<br>milind[dot]padalkar[at]gmail[dot]com</a></td>
 												</tr>
 											</table>
 										</td>
