--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 									My Ph.D. thesis is titled "Novel Techniques for Auto-inpainting in Heritage Reconstruction", for which I worked under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (<a href='http://www.daiict.ac.in/' target='_blank'>DA-IICT</a>), Gandhinagar, India.<br><br>
 									
 									At DA-IICT, I have also worked as teaching assistant and as a junior research fellow (JRF) in the Indian Digital Heritage (<a href='http://digitalhampi.in/' target='_blank'>IDH</a>)-Hampi project. I completed M.Tech. in Computer Engineering under the supervision of <a href='http://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology (<a href='http://www.svnit.ac.in/' target='_blank'>SVNIT</a>), Surat, India in 2010 and B.E. in Information Technology from Finolex Academy of Management and Technology (<a href='http://www.famt.ac.in/' target='_blank'>FAMT</a>), Ratnagiri (The University of Mumbai) in 2008.
+									
+									<br><br>
+									<font color="red">Job Openings:</font>
+									Vehant Technologies is looking for motivated and enthusiastic candidates with research interests broadly in the areas of computer vision and image processing. If interested, you may apply by sending an email to hr[at]vehant[dot]com or write to me for any questions. 
 									</p>
 								</td>
 							</tr>
