--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,15 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="workshop">&nbsp;Book</h2>
 									<ul>
-										<li>M. G. Padalkar, M. V. Joshi and N. L. Khatri, "Digital Heritage Reconstruction Using Super-resolution and Inpainting", <a rel="nofollow" target="_blank" href="http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008"><i>Synthesis Lectures on Visual Computing, Morgan & Claypool Publishers</i></a>, Dec. 2016.</li>
+										<li>M. G. Padalkar, M. V. Joshi and N. L. Khatri, <i>Digital Heritage Reconstruction Using Super-resolution and Inpainting</i>, B. A. Barsky, Ed. Synthesis Lectures on Visual Computing, Morgan & Claypool Publishers, Dec. 2016. [Online]. Available:  <a rel="nofollow" target="_blank" href="http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008">http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008</a></li>
+									</ul>
+								</td>								
+							</tr>
+							<tr>
+								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
+								<h2 style="font-style:italic;" id="workshop">&nbsp;Book Chapter</h2>
+									<ul>
+										<li>M. G. Padalkar and M. V. Joshi, "Automatic detection and inpainting of defaced regions and cracks in heritage monuments," in <i>Digital Hampi: Preserving Indian Cultural Heritage</i>, A. Mallik, S. Chaudhury, V. Chandru, and S. Srinivasan, Eds. Springer Singapore, 2017. [Online]. Available: <a rel="nofollow" target="_blank" href="www.springer.com/gp/book/9789811057373">www.springer.com/gp/book/9789811057373</a>.</li>
 									</ul>
 								</td>								
 							</tr>
@@ -74,12 +82,13 @@
 										</li>	
 									</ul>
 								</td>								
-							</tr>	
+							</tr>
 							<tr>
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
-								<h2 style="font-style:italic;" id="workshop">&nbsp;Book Chapter</h2>
+								<h2 style="font-style:italic;" id="mtechthesis">&nbsp;Ph.D. Thesis</h2>
 									<ul>
-										<li>M. G. Padalkar and M. V. Joshi, "Automatic detection and inpainting of defaced regions and cracks in heritage monuments," [<b>Revised draft submitted</b> to Prof. Santanu Chaudhury, IIT Delhi whose proposal for publishing an edited volume of chapters outlining the outcome of different aspects of the Indian Digital Heritage (IDH)-Hampi project has been approved by Springer-Verlag (<a rel="nofollow" target="_blank" href="http://digitalhampi.in/#book">http://digitalhampi.in/#book</a>)]</li>
+										<li>"Novel Techniques for Auto-inpainting in Heritage Reconstruction", April 2017.<br/>[<a target="_blank" href="./files/THESIS_MILIND.pdf?attredirects=0&amp;d=1/index.html">draft</a>][<a target="_blank" href="./files/milindpadalkarPhD.bib?attredirects=0&amp;d=1/index.html">bibtex</a>]
+										</li>
 									</ul>
 								</td>								
 							</tr>
@@ -87,7 +96,7 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="mtechthesis">&nbsp;M.Tech. Thesis</h2>
 									<ul>
-										<li>"Histogram based Efficient Video Shot Detection Algorithms", June 2010.<br/>[<a target="_blank" href="./files/MTechFinal.pdf?attredirects=0&amp;d=1/index.html">draft</a>]
+										<li>"Histogram based Efficient Video Shot Detection Algorithms", June 2010.<br/>[<a target="_blank" href="./files/MTechFinal.pdf?attredirects=0&amp;d=1/index.html">draft</a>][<a target="_blank" href="./files/milindpadalkarMTech.bib?attredirects=0&amp;d=1/index.html">bibtex</a>]
 										</li>
 									</ul>
 								</td>								
