Correction in link
Correction in book chapter link

--- a/publications.html
+++ b/publications.html
@@ -45,7 +45,7 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="workshop">&nbsp;Book Chapter</h2>
 									<ul>
-										<li>M. G. Padalkar and M. V. Joshi, "Automatic detection and inpainting of defaced regions and cracks in heritage monuments," in <i>Digital Hampi: Preserving Indian Cultural Heritage</i>, A. Mallik, S. Chaudhury, V. Chandru, and S. Srinivasan, Eds. Springer Singapore, 2017. [Online]. Available: <a rel="nofollow" target="_blank" href="www.springer.com/gp/book/9789811057373">www.springer.com/gp/book/9789811057373</a>.</li>
+										<li>M. G. Padalkar and M. V. Joshi, "Automatic detection and inpainting of defaced regions and cracks in heritage monuments," in <i>Digital Hampi: Preserving Indian Cultural Heritage</i>, A. Mallik, S. Chaudhury, V. Chandru, and S. Srinivasan, Eds. Springer Singapore, 2017. [Online]. Available: <a rel="nofollow" target="_blank" href="http://www.springer.com/gp/book/9789811057373">http://www.springer.com/gp/book/9789811057373</a>.</li>
 									</ul>
 								</td>								
 							</tr>
