Upated PhD subject
Updated PhD subject

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<td width="50%">&nbsp;
 									<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/milind4.jpg?attredirects=0/index.html"><img style="width: 75%;" src="./files/milind4.jpg?attredirects=0/index.html" border="0"></a>
 									<br><br><br> 
-									<b>Milind G. Padalkar (Ph.D. in I.C.T.)</b>&nbsp;<br>
+									<b>Milind G. Padalkar (Ph.D.)</b>&nbsp;<br>
 									<i>Senior Research Engineer</i>,<br>
 									<a href="http://wwww.vehant.com" target=_blank>Vehant Technologies, NOIDA, India.</a><br>
 									<!--<a href="mailto:milind.padalkar@gmail.com">milind.padalkar@gmail.com</a><br>-->
