--- a/education.html
+++ b/education.html
@@ -42,7 +42,7 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>2011 - 2017<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Ph.D. in Information and Communication Technology</b>,<br/>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Ph.D.</b>,<br/>
 										<i>Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT)</i>, Gandhinagar, India,<br>
 										CPI: 9.00/10.<br>
 										Thesis title: <i>Novel Techniques for Auto-Inpainting in Heritage Reconstruction</i><br>
