Website update after joining PAVIS
Website update after joining PAVIS, IIT in January 2019

--- a/awards.html
+++ b/awards.html
@@ -38,6 +38,26 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<!--<h2 style="font-style:italic;" id="awards">&nbsp;</h2>--><table>
 									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Sep. 2018 -<br> Dec. 2018<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
+										in <i>Multimedia Tools and Applications</i>.<br>
+										(Invited by: Dr. Borko Furht, Editor-in-Chief, Multimedia Tools and Applications).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Aug. 2018<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
+										in <i>Multimedia Tools and Applications</i>.<br>
+										(Invited by: Invited by: Guest Editor (SI: 1119 - Deep Learning for Computer-aided Medical Diagnosis), <br> Multimedia Tools and Applications).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Jan. 2018<br>
 										</b>
 										</td>
