--- a/education.html
+++ b/education.html
@@ -120,11 +120,20 @@
 								<h2 style="font-style:italic;" id="experience">&nbsp;Experience</h2>						
 								<table>
 									<tr>
-										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Mar. 2017 - till date<br>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Jan. 2019 - till date<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Postdoc</b>,<br/>
+										<i>PAVIS, IIT, Genova, Italy</i>.</br>
+										Supervisor:  <a href="https://www.iit.it/people/vittorio-murino" target=_blank>Prof. Vittorio Murino</a>.<br><br>
+										</td>
+									</tr>								
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Mar. 2017 - Dec. 2018<br>
 										</b>
 										</td>
 										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Senior Research Engineer</b>,<br/>
-										Vehant Technologies, NOIDA, India</i>.<br><br>
+										<i>Vehant Technologies, Pvt. Ltd., NOIDA, India</i>.<br><br>
 										</td>
 									</tr>
 									<tr>
@@ -132,7 +141,7 @@
 										</b>
 										</td>
 										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Teaching Assistant</b>,<br/>
-										DA-IICT, Gandhinagar, India</i>.<br><br>
+										<i>DA-IICT, Gandhinagar, India</i>.<br><br>
 										</td>
 									</tr>								
 									<tr>
@@ -140,7 +149,7 @@
 										</b>
 										</td>
 										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Junior Research Fellow (JRF)</b>,<br/>
-										DA-IICT, Gandhinagar, India</i>,<br>
+										<i>DA-IICT, Gandhinagar, India</i>,<br>
 										Project: "Immersive Navigation for a Walk-through Application", funded by Department of Science and Technology (DST), Govt. of India.
 										</td>
 									</tr>
