--- a/contact.html
+++ b/contact.html
@@ -41,20 +41,20 @@
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Address:</b></td>
 													<td>
-														Vehant Technologies Pvt. Ltd.,<br>
-														B-29, Sector-57,<br>
-														NOIDA - 201301,<br>
-														Uttar Pradesh,<br>
-														India
+														PAVIS, IIT, 8th Floor,<br>
+														Tower B, GREAT Campus, <br>
+														Erzelli - Via Enrico Melen, 83,<br>
+														16152 Genova GE,<br>
+														Italy
 													</td>
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Phone:</b></td>
-													<td>+91-120-4610231</td>
+													<td>+39-3494277096</td>
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Email:</b></td>
-													<td>milindp[at]vehant[dot]com,<br>milind[dot]padalkar[at]gmail[dot]com</a></td>
+													<td>milind[dot]padalkar[at]iit[dot]it,<br>milind[dot]padalkar[at]gmail[dot]com</a></td>
 												</tr>
 											</table>
 										</td>
@@ -63,7 +63,7 @@
 										</td>
 										-->
 										<td width="77%" align="center">
-											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.8865632795055!2d77.35208141429167!3d28.603179692161408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce512bed93215%3A0xe236c5926b249615!2sVehant+Technologies+Private+Limited!5e0!3m2!1sen!2s!4v1492429049502" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5698.715968365977!2d8.863075499999995!3d44.4258185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x88c101f3ce361f15!2sFondazione+Istituto+Italiano+di+Tecnologia+-+Erzelli!5e0!3m2!1sen!2sit!4v1547730251385" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 										</td>
 									</tr>
 								</table>
