--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
 													</td>
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
-													<td><b> &nbsp Phone:</b></td>
-													<td>+39-3494277096</td>
+													<!--<td><b> &nbsp Phone:</b></td>
+													<td>+39-3494277096</td>-->
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Email:</b></td>
