--- a/awards.html
+++ b/awards.html
@@ -38,12 +38,52 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<!--<h2 style="font-style:italic;" id="awards">&nbsp;</h2>--><table>
 									<tr>
-										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Sep. 2018 -<br> Dec. 2018<br>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>June 2021<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
-										in <i>Multimedia Tools and Applications</i>.<br>
-										(Invited by: Dr. Borko Furht, Editor-in-Chief, Multimedia Tools and Applications).
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Invited to serve as a <b>Reviewer</b><br>
+										for <i>The 32nd British Machine Vision Conference</i>.<br>
+										(Invited by: Programme Chair, BMVC2021).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>May 2021<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Invited to serve as a <b>Reviewer</b><br>
+										for <i>The 3rd workshop on Structuring and Understanding of Multimedia Heritage Contents</i> <br>to be held in conjunction with ACM Multimedia 2021.<br>
+										(Invited by: Workshop Organizers).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Dec. 2020 <br> onwards<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Serving as a <b>Member of the Reviewer Board,</b><br>
+										for <i>Journal of Imaging</i>.<br>
+										(Invited by: Managing Editor, Journal of Imaging).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Sept. 2020<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as a <b>Reviewer</b><br>
+										for <i>ICES Journal of Marine Science.</i>.<br>
+										(Invited by: Editor, ICES Journal of Marine Science).
+										</td>
+									</tr>
+									<tr><td><br></td></tr>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Sept. 2018 -<br> Dec. 2018<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as a <b>Reviewer</b><br>
+										for <i>Multimedia Tools and Applications</i>.<br>
+										(Invited by: Editor-in-Chief, Multimedia Tools and Applications).
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -51,9 +91,9 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Aug. 2018<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
-										in <i>Multimedia Tools and Applications</i>.<br>
-										(Invited by: Invited by: Guest Editor (SI: 1119 - Deep Learning for Computer-aided Medical Diagnosis), <br> Multimedia Tools and Applications).
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as a <b>Reviewer</b><br>
+										for <i>Multimedia Tools and Applications</i>.<br>
+										(Invited by: Invited by: Guest Editor for <br>Special Issue: 1119 - Deep Learning for Computer-aided Medical Diagnosis, <br> Multimedia Tools and Applications).
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -61,9 +101,9 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Jan. 2018<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
-										in <i>IEEE Access</i>.<br>
-										(Invited by: Dr. Mehul S. Raval, IEEE Access Associate Editor).
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as a <b>Reviewer</b><br>
+										for <i>IEEE Access</i>.<br>
+										(Invited by: IEEE Access Associate Editor).
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -71,9 +111,9 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Jul. 2017<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
-										in <i>Imaging Science Journal</i>.<br>
-										(Invited by: Dr. Mark A Richardson, Chief Editor, Imaging Science Journal).
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as a <b>Reviewer</b><br>
+										for <i>Imaging Science Journal</i>.<br>
+										(Invited by: Chief Editor, Imaging Science Journal).
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -91,8 +131,8 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Nov. 2014<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as an Organizing Committee Member</b><br>
-										in the <i><a target="_blank" href="http://www.cvl.iis.u-tokyo.ac.jp/e-Heritage2014/committee.html">3rd ACCV Workshop on e-Heritage</a></i><br>
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as an <b>Organizing Committee Member</b><br>
+										for the <i><a target="_blank" href="http://www.cvl.iis.u-tokyo.ac.jp/e-Heritage2014/committee.html">3rd ACCV Workshop on e-Heritage</a></i><br>
 										which was held in conjunction with the 12th Asian Conference on Computer Vision (ACCV2014), Singapore.
 										</td>
 									</tr>	
@@ -101,8 +141,8 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Sept. 2014<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
-										in the <i>Eighth International Conference on Advances in Pattern Recognition (ICAPR 2015)</i>, Kolkata.<br>
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as a <b>Reviewer</b><br>
+										for the <i>Eighth International Conference on Advances in Pattern Recognition (ICAPR 2015)</i>, Kolkata.<br>
 										(Invited by: Program Chairs, ICAPR 2015).
 										</td>
 									</tr>		
@@ -111,8 +151,8 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Jan. 2014<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Served as a Reviewer</b><br>
-										in <i> Multimedia Tools and Applications</i>.<br>
+										<td style='width:873px;height:42px;vertical-align:text-top;'>Served as a <b>Reviewer</b><br>
+										for<i> Multimedia Tools and Applications</i>.<br>
 										(Invited by: The Editorial Office, Multimedia Tools and Applications).
 										</td>
 									</tr>										
