--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Address:</b></td>
 													<td>
-														PAVIS, IIT, 8th Floor,<br>
+														PAVIS/VGM, IIT, 8th Floor,<br>
 														Tower B, GREAT Campus, <br>
 														Erzelli - Via Enrico Melen, 83,<br>
 														16152 Genova GE,<br>
