--- a/education.html
+++ b/education.html
@@ -124,8 +124,10 @@
 										</b>
 										</td>
 										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Postdoc</b>,<br/>
-										<i>PAVIS, IIT, Genova, Italy</i>.</br>
-										Supervisor:  <a href="https://www.iit.it/people/vittorio-murino" target=_blank>Prof. Vittorio Murino</a>.<br><br>
+										<i>PAVIS/VGM, IIT, Genova, Italy</i>.</br>
+										Supervisor:<br>
+										<a href="https://www.iit.it/people/vittorio-murino" target=_blank>Prof. Vittorio Murino</a> (Jan. 2019 - Aug. 2019), <br>
+										<a href="https://www.iit.it/people/alessio-delbue" target=_blank>Dr. Alessio Del Bue</a> (Aug. 2019 onwards).<br><br>
 										</td>
 									</tr>								
 									<tr>
