--- a/publications.html
+++ b/publications.html
@@ -35,17 +35,30 @@
 						<tbody>
 							<tr>
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
-								<h2 style="font-style:italic;" id="workshop">&nbsp;Book</h2>
+								<h2 style="font-style:italic;" id="workshop">&nbsp;Books</h2>
 									<ul>
-										<li>M. G. Padalkar, M. V. Joshi and N. L. Khatri, <i>Digital Heritage Reconstruction Using Super-resolution and Inpainting</i>, B. A. Barsky, Ed. Synthesis Lectures on Visual Computing, Morgan & Claypool Publishers, Dec. 2016. [Online]. Available:  <a rel="nofollow" target="_blank" href="http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008">http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008</a></li>
+										<li>Digital Heritage Reconstruction Using Super-resolution and Inpainting<br>
+										<i>M. G. Padalkar, M. V. Joshi and N. L. Khatri</i><br>
+										B. A. Barsky, Ed. Synthesis Lectures on Visual Computing,<br>
+										Morgan & Claypool Publishers, Dec. 2016. 
+										<br>
+										[<a rel="nofollow" target="_blank" href="http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008">Link</a>] 
+										[<a rel="nofollow" target="_blank" href="https://www.morganclaypoolpublishers.com/catalog_Orig/samples/9781627056168_sample.pdf">Sample chapter</a>]
+										</li>
 									</ul>
 								</td>								
 							</tr>
 							<tr>
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
-								<h2 style="font-style:italic;" id="workshop">&nbsp;Book Chapter</h2>
+								<h2 style="font-style:italic;" id="workshop">&nbsp;Book Chapters</h2>
 									<ul>
-										<li>M. G. Padalkar and M. V. Joshi, "Automatic detection and inpainting of defaced regions and cracks in heritage monuments," in <i>Digital Hampi: Preserving Indian Cultural Heritage</i>, A. Mallik, S. Chaudhury, V. Chandru, and S. Srinivasan, Eds. Springer Singapore, 2017. [Online]. Available: <a rel="nofollow" target="_blank" href="http://www.springer.com/gp/book/9789811057373">http://www.springer.com/gp/book/9789811057373</a>.</li>
+										<li>
+										Automatic detection and inpainting of defaced regions and cracks in heritage monuments<br>
+										<i>M. G. Padalkar and M. V. Joshi</i>,<br> in <i>Digital Hampi: Preserving Indian Cultural Heritage</i>,<br>
+										A. Mallik, S. Chaudhury, V. Chandru, and S. Srinivasan, Eds.<br>
+										Springer Singapore, 2017.<br>
+										[<a rel="nofollow" target="_blank" href="http://www.springer.com/gp/book/9789811057373">Link</a>]
+										</li>
 									</ul>
 								</td>								
 							</tr>
@@ -53,10 +66,12 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="conference">&nbsp;Journal</h2>
 									<ul>
-										<li>M. G. Padalkar and M. V. Joshi, "Auto-inpainting Heritage Scenes: A Complete Framework for Detecting and Infilling Cracks in Images and Videos with Quantitative Assessment," <i>Machine Vision and Applications (MVA)</i>, vol. 26, no. 2-3, 317-337, March 2015.
-										[Online]. Available:  <a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/s00138-015-0661-6">http://dx.doi.org/10.1007/s00138-015-0661-6</a>.
-										&nbsp;&nbsp;[<a target="_blank" href="http://www.springer.com/computer/image+processing/journal/138">Journal Impact Factor (Jan. 2015): 1.444</a>]
-										<br/>[<a href="./files/MVA-acceptedDraft.pdf" target="_blank">draft</a>]
+										<li>Auto-inpainting Heritage Scenes: A Complete Framework for Detecting and Infilling Cracks in Images and Videos with Quantitative Assessment<br>
+										<i>M. G. Padalkar and M. V. Joshi</i><br>
+										Machine Vision and Applications (MVA) [<a target="_blank" href="http://www.springer.com/computer/image+processing/journal/138">Jan. 2015 Impact Factor: 1.444</a>]<br>
+										vol. 26, no. 2-3, 317-337, March 2015. <br>
+										[<a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/s00138-015-0661-6">Link</a>]
+										[<a href="./files/MVA-acceptedDraft.pdf" target="_blank">draft</a>]
 										<br/><br/>
 										</li>
 									</ul>
@@ -66,19 +81,51 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="conference">&nbsp;Conferences and Workshops</h2>
 									<ul>
-										<li>M. G. Padalkar, M. V. Joshi and N. Khatri, "Simultaneous Inpainting and Super-resolution Using Self-learning," in <i>26th British Machine Vision Conference (BMVC-2015)</i>, Swansea, UK, Sept. 7-10, 2015, pp. 105.1-105.12.
-										[Online]. Available: <a rel='nofollow' target='_blank'  href='https://dx.doi.org/10.5244/C.29.105'>https://dx.doi.org/10.5244/C.29.105</a> 
-										[<a href="./files/bmvc2015_329_poster.pdf" target="_blank">poster</a>] 
-										[<font color="green">Supported by Xerox Research Centre India Travel Grant</font>]
+										<li>Multi-illumination Fusion with Crack Enhancement using Cycle-Consistent Losses<br>
+										<i>M. G. Padalkar, C. Beltran-Gonzalez and A. Del Bue</i><br>
+										28th IEEE International Conference on Image Processing (IEEE - ICIP2021) <br>
+										[Accepted]
 										<br/><br/></li>
-										<li>M. G. Padalkar, M. V. Vora, M. V. Joshi, M. A. Zaveri, and M. S. Raval, "Identifying vandalized regions in facial images of statues for inpainting," in <i>New Trends in Image Analysis and Processing, ICIAP 2013</i>, ser. Lecture Notes in Computer Science. Springer Berlin Heidelberg, Sept. 2013, vol. 8158, pp. 208-217. [Online]. Available:  <a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/978-3-642-41190-8_23">http://dx.doi.org/10.1007/978-3-642-41190-8_23</a>
-										<div class='sites-embed-align-left-wrapping-off'><div style='width:225px;' class='sites-embed-border-on sites-embed'><h4 class='sites-embed-title'>[Presentation]</h4><div class='sites-embed-content sites-embed-type-docs-video'><iframe src='https://docs.google.com/file/d/0BzM1FI5bddl1SlR6VHpENlN3WlU/preview' onload='window.scrollTo(0,0)' allowfullscreen='true' frameborder='0' height='145' width='225'></iframe></div>
+										<li>A Versatile Crack Inspection Portable System based on Classifier Ensemble and Controlled Illumination<br>
+										<i>M. G. Padalkar, C. Beltran-Gonzalez, M. Bustreo, A. Del Bue and V. Murino,</i><br>
+										25th International Conference on Pattern Recognition (ICPR202) <br>
+										[<a rel='nofollow' target='_blank'  href='https://doi.org/10.1109/ICPR48806.2021.9412039'>Link</a>]
+										[<a rel='nofollow' target='_blank'  href='https://arxiv.org/pdf/2010.09557'>PDF</a>]
+										[<a href="./files/ICRP2020_1127_poster.pdf" target="_blank">poster</a>]
+										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNJqW-Dc21a3eD6UA?e=ehGDZD">Presentation</a>]<br>
+										<iframe src="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122985&authkey=APnOOXtKzZ1WG2g" width="320" height="181" frameborder="0" scrolling="no" allowfullscreen></iframe>
 										<br/><br/></li>
-										<li>M. G. Padalkar, M. A. Zaveri, and M. V. Joshi, "SVD based automatic detection of target regions for image inpainting," in <i>Computer Vision - ACCV 2012 Workshops</i>, ser. Lecture Notes in Computer Science, J.-I. Park and J. Kim, Eds., vol. 7729. Springer Berlin Heidelberg, 2013, pp. 61-71. [Online]. Available:  <a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/978-3-642-37484-5_6">http://dx.doi.org/10.1007/978-3-642-37484-5_6</a><br/><br/>
+										<li>Simultaneous Inpainting and Super-resolution Using Self-learning<br>
+										<i>M. G. Padalkar, M. V. Joshi and N. Khatri,</i><br>
+										26th British Machine Vision Conference (BMVC 2015) <br>
+										[<a rel='nofollow' target='_blank'  href='https://dx.doi.org/10.5244/C.29.105'>Link</a>]
+										[<a rel='nofollow' target='_blank'  href='http://www.bmva.org/bmvc/2015/papers/paper105/paper105.pdf'>PDF</a>]
+										[<a rel='nofollow' target='_blank'  href='http://www.bmva.org/bmvc/2015/papers/paper105/sup105.zip'>Supplemental Material</a>] 
+										[<a href="./files/bmvc2015_329_poster.pdf" target="_blank">poster</a>]
+										<br/><br/></li>
+										<li>Identifying vandalized regions in facial images of statues for inpainting <br>
+										<i>M. G. Padalkar, M. V. Vora, M. V. Joshi, M. A. Zaveri, and M. S. Raval</i><br>
+										MM4CH2013 (New Trends in Image Analysis and Processing, ICIAP 2013)<br>
+										[<a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/978-3-642-41190-8_23">Link</a>]
+										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNG1a6wQs_hTRNWDQ?e=fIxrTN">Presentation</a>]<br>
+										<iframe src="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122982&authkey=AO-Rj5O4I1u7bMg" width="320" height="240" frameborder="0" scrolling="no" allowfullscreen></iframe>
+										<br/><br/></li>
+										<li>SVD based automatic detection of target regions for image inpainting <br>
+										<i>M. G. Padalkar, M. A. Zaveri, and M. V. Joshi</i> <br>
+										<a rel="nofollow" target="_blank" href="https://www.cvl.iis.u-tokyo.ac.jp/e-Heritage2012/index.html">2nd ACCV Workshop on eHeritage 2012</a> <br>
+										[<a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/978-3-642-37484-5_6">Link</a>]
+										<br/><br/>
 										</li>
-										<li>M. G. Padalkar, M. V. Joshi, M. A. Zaveri, and C. M. Parmar, "Exemplar based Inpainting using Autoregressive Parameter Estimation," in <i>Proceedings of the International Conference on Signal, Image and Video Processing (ICSIVP'12)</i>, IIT Patna, India, Jan. 2012, pp. 154-160.
-										<br/>[<a target="_blank" href="./files/paper51.pdf?attredirects=0&amp;d=1/index.html">draft</a>]<br/><br/></li>
-										<li>M. G. Padalkar and M. A. Zaveri, "Dissolve Detection Based Shot Identification Using Singular Value Decomposition," in <i>Proceedings of the 2010 Fourth Asia International Conference on Mathematical/Analytical Modelling and Computer Simulation (AMS'10),</i> IEEE Computer Society, Kota Kinabalu, Malaysia, May 2010, pp. 312-316. [Online]. Available: <a rel='nofollow' target='_blank' href='http://dx.doi.org/10.1109/AMS.2010.69'>http://dx.doi.org/10.1109/AMS.2010.69</a><br/><br/>
+										<li>Exemplar based Inpainting using Autoregressive Parameter Estimation <br>
+										<i>M. G. Padalkar, M. V. Joshi, M. A. Zaveri, and C. M. Parmar</i> <br>
+										International Conference on Signal, Image and Video Processing (ICSIVP'12) <br>
+										[<a target="_blank" href="./files/paper51.pdf?attredirects=0&amp;d=1/index.html">PDF</a>]
+										<br/><br/></li>
+										<li>Dissolve Detection Based Shot Identification Using Singular Value Decomposition <br>
+										<i>M. G. Padalkar and M. A. Zaveri</i> <br>
+										Fourth Asia International Conference on <br> Mathematical/Analytical Modelling and Computer Simulation (AMS'10) <br>
+										[<a rel='nofollow' target='_blank' href='http://dx.doi.org/10.1109/AMS.2010.69'>Link</a>]
+										<br/><br/>
 										</li>	
 									</ul>
 								</td>								
