--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
 										[<a rel='nofollow' target='_blank'  href='https://arxiv.org/pdf/2010.09557'>PDF</a>]
 										[<a href="./files/ICRP2020_1127_poster.pdf" target="_blank">poster</a>]
 										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNJqW-Dc21a3eD6UA?e=ehGDZD">Presentation</a>]<br>
-										<iframe src="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122985&authkey=APnOOXtKzZ1WG2g" width="320" height="181" frameborder="0" scrolling="no" allowfullscreen></iframe>
+										<div class='sites-embed-content sites-embed-type-docs-video'><iframe src="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122985&authkey=APnOOXtKzZ1WG2g" width="320" height="181" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
 										<br/><br/></li>
 										<li>Simultaneous Inpainting and Super-resolution Using Self-learning<br>
 										<i>M. G. Padalkar, M. V. Joshi and N. Khatri,</i><br>
@@ -108,7 +108,7 @@
 										MM4CH2013 (New Trends in Image Analysis and Processing, ICIAP 2013)<br>
 										[<a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/978-3-642-41190-8_23">Link</a>]
 										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNG1a6wQs_hTRNWDQ?e=fIxrTN">Presentation</a>]<br>
-										<iframe src="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122982&authkey=AO-Rj5O4I1u7bMg" width="320" height="240" frameborder="0" scrolling="no" allowfullscreen></iframe>
+										<div class='sites-embed-content sites-embed-type-docs-video'><iframe src="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122982&authkey=AO-Rj5O4I1u7bMg" width="320" height="240" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
 										<br/><br/></li>
 										<li>SVD based automatic detection of target regions for image inpainting <br>
 										<i>M. G. Padalkar, M. A. Zaveri, and M. V. Joshi</i> <br>
