--- a/publications.html
+++ b/publications.html
@@ -84,16 +84,19 @@
 										<li>Multi-illumination Fusion with Crack Enhancement using Cycle-Consistent Losses<br>
 										<i>M. G. Padalkar, C. Beltran-Gonzalez and A. Del Bue</i><br>
 										28th IEEE International Conference on Image Processing (IEEE - ICIP2021) <br>
-										[Accepted]
+										[<a rel='nofollow' target='_blank'  href='https://doi.org/10.1109/ICIP42928.2021.9506013'>Link</a>]
+										[<a rel='nofollow' target='_blank'  href='https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9506013'>PDF</a>]
+										[<a href="./files/ICIP2021_2077_poster.pdf" target="_blank">Poster</a>]
+										[<a href="./files/ICIP2021_2077_presentation.pdf" target="_blank">Slides</a>]											
+										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNsPUgiaivRFYCwXg?e=2dmYwL">Video</a>]
 										<br/><br/></li>
 										<li>A Versatile Crack Inspection Portable System based on Classifier Ensemble and Controlled Illumination<br>
 										<i>M. G. Padalkar, C. Beltran-Gonzalez, M. Bustreo, A. Del Bue and V. Murino,</i><br>
 										25th International Conference on Pattern Recognition (ICPR202) <br>
 										[<a rel='nofollow' target='_blank'  href='https://doi.org/10.1109/ICPR48806.2021.9412039'>Link</a>]
 										[<a rel='nofollow' target='_blank'  href='https://arxiv.org/pdf/2010.09557'>PDF</a>]
-										[<a href="./files/ICRP2020_1127_poster.pdf" target="_blank">poster</a>]
-										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNJqW-Dc21a3eD6UA?e=ehGDZD">Presentation</a>]
-										[<a rel="nofollow" target="_blank" href="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122985&authkey=APnOOXtKzZ1WG2g">Video</a>]
+										[<a href="./files/ICRP2020_1127_poster.pdf" target="_blank">Poster</a>]
+										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNJqW-Dc21a3eD6UA?e=ehGDZD">Video</a>]
 										<br/><br/></li>
 										<li>Simultaneous Inpainting and Super-resolution Using Self-learning<br>
 										<i>M. G. Padalkar, M. V. Joshi and N. Khatri,</i><br>
@@ -101,14 +104,13 @@
 										[<a rel='nofollow' target='_blank'  href='https://dx.doi.org/10.5244/C.29.105'>Link</a>]
 										[<a rel='nofollow' target='_blank'  href='http://www.bmva.org/bmvc/2015/papers/paper105/paper105.pdf'>PDF</a>]
 										[<a rel='nofollow' target='_blank'  href='http://www.bmva.org/bmvc/2015/papers/paper105/sup105.zip'>Supplemental Material</a>] 
-										[<a href="./files/bmvc2015_329_poster.pdf" target="_blank">poster</a>]
+										[<a href="./files/bmvc2015_329_poster.pdf" target="_blank">Poster</a>]
 										<br/><br/></li>
 										<li>Identifying vandalized regions in facial images of statues for inpainting <br>
 										<i>M. G. Padalkar, M. V. Vora, M. V. Joshi, M. A. Zaveri, and M. S. Raval</i><br>
 										MM4CH2013 (New Trends in Image Analysis and Processing, ICIAP 2013)<br>
 										[<a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/978-3-642-41190-8_23">Link</a>]
-										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNG1a6wQs_hTRNWDQ?e=fIxrTN">Presentation</a>]
-										[<a rel="nofollow" target="_blank" href="https://onedrive.live.com/embed?cid=813C5BE72F1590B5&resid=813C5BE72F1590B5%2122982&authkey=AO-Rj5O4I1u7bMg">Video</a>]
+										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNG1a6wQs_hTRNWDQ?e=fIxrTN">Video</a>]
 										<br/><br/></li>
 										<li>SVD based automatic detection of target regions for image inpainting <br>
 										<i>M. G. Padalkar, M. A. Zaveri, and M. V. Joshi</i> <br>
