Book chapter links added
Book chapter links added.

--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,9 @@
 										<i>M. G. Padalkar and M. V. Joshi</i>,<br> in <i>Digital Hampi: Preserving Indian Cultural Heritage</i>,<br>
 										A. Mallik, S. Chaudhury, V. Chandru, and S. Srinivasan, Eds.<br>
 										Springer Singapore, 2017.<br>
-										[<a rel="nofollow" target="_blank" href="http://www.springer.com/gp/book/9789811057373">Link</a>]
+										[<a rel="nofollow" target="_blank" href="http://www.springer.com/gp/book/9789811057373">Book link</a>]
+										[<a rel="nofollow" target="_blank" href="https://doi.org/10.1007/978-981-10-5738-0_14">Chapter link</a>]			
+										[<a href="./files/DAIICT_book_chapter_Hampi.pdf" target="_blank">PDF (draft)</a>]											
 										</li>
 									</ul>
 								</td>								
