Added link to ICIP2021 sup. material
Added link to ICIP2021 sup. material

--- a/publications.html
+++ b/publications.html
@@ -88,6 +88,7 @@
 										28th IEEE International Conference on Image Processing (IEEE - ICIP2021) <br>
 										[<a rel='nofollow' target='_blank'  href='https://doi.org/10.1109/ICIP42928.2021.9506013'>Link</a>]
 										[<a rel='nofollow' target='_blank'  href='https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9506013'>PDF</a>]
+										[<a href='./files/ICIP2021_2077_supp.pdf' target='_blank'>Sup. Material</a>]
 										[<a href="./files/ICIP2021_2077_poster.pdf" target="_blank">Poster</a>]
 										[<a href="./files/ICIP2021_2077_presentation.pdf" target="_blank">Slides</a>]											
 										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNsPUgiaivRFYCwXg?e=2dmYwL">Video</a>]
@@ -105,7 +106,7 @@
 										26th British Machine Vision Conference (BMVC 2015) <br>
 										[<a rel='nofollow' target='_blank'  href='https://dx.doi.org/10.5244/C.29.105'>Link</a>]
 										[<a rel='nofollow' target='_blank'  href='http://www.bmva.org/bmvc/2015/papers/paper105/paper105.pdf'>PDF</a>]
-										[<a rel='nofollow' target='_blank'  href='http://www.bmva.org/bmvc/2015/papers/paper105/sup105.zip'>Supplemental Material</a>] 
+										[<a rel='nofollow' target='_blank'  href='http://www.bmva.org/bmvc/2015/papers/paper105/sup105.zip'>Sup. Material</a>] 
 										[<a href="./files/bmvc2015_329_poster.pdf" target="_blank">Poster</a>]
 										<br/><br/></li>
 										<li>Identifying vandalized regions in facial images of statues for inpainting <br>
