--- a/publications.html
+++ b/publications.html
@@ -87,15 +87,15 @@
 										<i>M. G. Padalkar, C. Beltran-Gonzalez and A. Del Bue</i><br>
 										28th IEEE International Conference on Image Processing (IEEE - ICIP2021) <br>
 										[<a rel='nofollow' target='_blank'  href='https://doi.org/10.1109/ICIP42928.2021.9506013'>Link</a>]
-										[<a rel='nofollow' target='_blank'  href='https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9506013'>PDF</a>]
-										[<a href='./files/ICIP2021_2077_supp.pdf' target='_blank'>Sup. Material</a>]
+										[<a href='./files/ICIP2021_2077_paper.pdf' target="_blank">PDF</a>]
+										[<a href='./files/ICIP2021_2077_supp.pdf' target="_blank">Sup. Material</a>]
 										[<a href="./files/ICIP2021_2077_poster.pdf" target="_blank">Poster</a>]
 										[<a href="./files/ICIP2021_2077_presentation.pdf" target="_blank">Slides</a>]											
 										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNsPUgiaivRFYCwXg?e=2dmYwL">Video</a>]
 										<br/><br/></li>
 										<li>A Versatile Crack Inspection Portable System based on Classifier Ensemble and Controlled Illumination<br>
 										<i>M. G. Padalkar, C. Beltran-Gonzalez, M. Bustreo, A. Del Bue and V. Murino,</i><br>
-										25th International Conference on Pattern Recognition (ICPR202) <br>
+										25th International Conference on Pattern Recognition (ICPR2020) <br>
 										[<a rel='nofollow' target='_blank'  href='https://doi.org/10.1109/ICPR48806.2021.9412039'>Link</a>]
 										[<a rel='nofollow' target='_blank'  href='https://arxiv.org/pdf/2010.09557'>PDF</a>]
 										[<a href="./files/ICRP2020_1127_poster.pdf" target="_blank">Poster</a>]
