Added link to IT524 course notes
Added link to IT524 course notes.

Changes to be committed:
      new file:   files/milind_IT524.zip
      modified:   index.html
      modified:   links.html

--- a/links.html
+++ b/links.html
@@ -172,6 +172,15 @@
 								</li>
 							</ul>
 						</li>
+                                                <li>
+							<h3>Notes</h3>
+							<ul>
+								<li>
+                                                                        My notes for <a rel='nofollow' target='_blank' href='./files/milind_IT524.zip'>computer vision course (IT524)</a>, taught by <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. Manjunath V. Joshi</a> at <a href='https://www.daiict.ac.in/' target='_blank'>DA-IICT</a>.
+								</li>
+							</ul>
+						</li>
+
 					</ul>
 				
 				</div>
