--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google Scholar</a>,   
 									<a target="_blank" href="https://twitter.com/mgpadalkar">Twitter</a>,    
 									<a target="_blank" href="https://www.linkedin.com/in/milind-padalkar-326b1511/">LinkedIn</a>
+									<a target="_blank" href="./files/milind-cv.pdf">CV</a>
 									<br>
 									</div>
 									<!--<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/DSC00740.JPG?attredirects=0/index.html"><img style="width: 95%;" src="./files/DSC00740.JPG?attredirects=0/index.html" border="0"></a></div>-->
