--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<a target="_blank" href="https://www.iit.it/people/milind-padalkar">my_page@IIT</a>,    
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google Scholar</a>,   
 									<a target="_blank" href="https://twitter.com/mgpadalkar">Twitter</a>,    
-									<a target="_blank" href="https://www.linkedin.com/in/milind-padalkar-326b1511/">LinkedIn</a>
+									<a target="_blank" href="https://www.linkedin.com/in/milind-padalkar-326b1511/">LinkedIn</a>,    
 									<a target="_blank" href="./files/milind-cv.pdf">CV</a>
 									<br>
 									</div>
