CV, publications and homepage updated
CV, publications and homepage updated.

Changes to be committed:
      modified:   files/milind-cv.pdf
      modified:   footline.js
      modified:   index.html
      modified:   publications.html

--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,20 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="conference">&nbsp;Conferences and Workshops</h2>
 									<ul>
+                                                                                <li>3D Key-points Estimation From Single-view RGB Images<br>
+										<i>M. Zohaib, M. Taiana, M. G. Padalkar and A. Del Bue</i><br>
+										21st International Conference on Image Analysis and Processing (ICIAP-2022) <br>
+                                                                                [Accepted (<b><font color="red">Oral</font></b>)] <br>
+                                                                                <!--
+										[<a rel='nofollow' target='_blank'  href='https://doi.org/10.1109/ICIP42928.2021.9506013'>Link</a>]
+										[<a href='./files/ICIP2021_2077_paper.pdf' target="_blank">PDF</a>]
+										[<a href='./files/ICIP2021_2077_supp.pdf' target="_blank">Sup. Material</a>]
+										[<a href="./files/ICIP2021_2077_poster.pdf" target="_blank">Poster</a>]
+										[<a href="./files/ICIP2021_2077_presentation.pdf" target="_blank">Slides</a>]											
+										[<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgbNsPUgiaivRFYCwXg?e=2dmYwL">Video</a>]
+                                                                                -->
+										<br/><br/></li>
+
 										<li>Multi-illumination Fusion with Crack Enhancement using Cycle-Consistent Losses<br>
 										<i>M. G. Padalkar, C. Beltran-Gonzalez and A. Del Bue</i><br>
 										28th IEEE International Conference on Image Processing (IEEE - ICIP2021) <br>
