--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 									<br>
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google MyCitations</a>
 									<br>-->
+
+									<p>I am a postdoc at Pattern Analysis and Computer Vision (<a href="https://pavis.iit.it/" target=_blank>PAVIS</a>) / Visual Geometry and Modelling (<a href="https://vgm.iit.it/" target=_blank>VGM</a>) Research Line, Istituto Italiano di Tecnologia (<a href="https://www.iit.it/" target="_blank">IIT</a>), Genova, Italy, working with <a href="https://www.iit.it/people/alessio-delbue" target=_blank >Dr. Alessio Del Bue</a>. Prior to joining IIT, I worked as a senior research engineer at <a href="http://wwww.vehant.com" target=_blank>Vehant Technologies</a> (Mar. 2017 - Dec. 2018).</p>
+									<p>My Ph.D. thesis is titled "Novel Techniques for Auto-inpainting in Heritage Reconstruction", for which I worked under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. Manjunath V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (<a href='https://www.daiict.ac.in/' target='_blank'>DA-IICT</a>), Gandhinagar, India.</p>
+									<p>At DA-IICT, I have also worked as teaching assistant and as a junior research fellow (JRF) in the Indian Digital Heritage (<a href='http://digitalhampi.in/' target='_blank'>IDH</a>)-Hampi project.</p>
+									<p>I completed M.Tech. in Computer Engineering under the supervision of <a href='https://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology (<a href='https://www.svnit.ac.in/' target='_blank'>SVNIT</a>), Surat, India in 2010 and B.E. in Information Technology from Finolex Academy of Management and Technology (<a href='http://www.famt.ac.in/' target='_blank'>FAMT</a>), Ratnagiri (The University of Mumbai) in 2008.</p>
+									<p>I have co-authored the book titled "Digital Heritage Reconstruction Using Super-resolution and Inpainting" published under Synthesis Lectures on Visual Computing by Morgan & Claypool Publishers in December 2016.</p>
+
+                                                                        <!--
 									<p style="text-align: justify; margin-right: 30px; margin-left: 1px; font: 16px,sans-serif; height:28p">
 									I am a postdoc at Pattern Analysis and Computer Vision (<a href="https://pavis.iit.it/" target=_blank>PAVIS</a>) / Visual Geometry and Modelling (<a href="https://vgm.iit.it/" target=_blank>VGM</a>) Research Line, Istituto Italiano di Tecnologia (IIT), Genova, Italy. Prior to joining IIT, I was working as a senior research engineer at <a href="http://wwww.vehant.com" target=_blank>Vehant Technologies</a> (Mar. 2017 - Dec. 2018).
 									<br><br>
@@ -73,6 +81,7 @@
 									
 									I have co-authored the book titled "Digital Heritage Reconstruction Using Super-resolution and Inpainting" published under Synthesis Lectures on Visual Computing by Morgan & Claypool Publishers in December 2016.
 									</p>
+                                                                        -->
 								</td>
 							</tr>
 						</tbody>
