ICIAP2022_203 material added
ICIAP2022_203 material added.

Changes to be committed:
      new file:   files/papers/ICIAP2022_203_paper.pdf
      new file:   files/papers/ICIAP2022_203_supp.pdf
      new file:   files/papers/ICIAP2022_203_teaser.jpg
      new file:   files/papers/ICIAP2022_203_teaser.mp4
      modified:   index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="" target="_blank">
+							<a href="https://doi.org/10.1007/978-3-031-06430-2_3" target="_blank">
                 <papertitle>3D Key-points Estimation From Single-view RGB Images</papertitle>
               </a>
               <br>
@@ -108,17 +108,17 @@
 	      <a href="https://www.iit.it/people/matteo-taiana">Matteo Taiana</a>, 
               <strong>Milind G. Padalkar</strong>, 
               <a href="https://www.iit.it/people/alessio-delbue">Alessio Del Bue</a>  <br>
-              <em>ICIAP</em>, 2022 [Accepted for <font color="red"><strong>oral presentation</strong></font>]
+              <em>ICIAP</em>, 2022 [<font color="red"><strong>Oral presentation</strong></font>]
               <br>
-	      <!--
 							<a href='./files/papers/ICIAP2022_203_paper.pdf' target="_blank">PDF</a> /
 							<a href='./files/papers/ICIAP2022_203_supp.pdf' target="_blank">Sup. Material</a> / 
+							<a rel="nofollow" target="_blank" href="https://1drv.ms/v/s!ArWQFS_nWzyBgqQ0WzHOO1rDhqEl0Q?e=orJryJ">Video</a>
+	      <!--
 							<a href="./files/papers/ICIAP2022_203_poster.pdf" target="_blank">Poster</a> / 
 							<a href="./files/papers/ICIAP2022_203_presentation.pdf" target="_blank">Slides</a> / 
-							<a rel="nofollow" target="_blank" href="">Video</a>
 	      -->
               <p></p>
-              <p>Our paper presents an end-to-end approach that leverages images for estimating an ordered list of 3D key-point.</p>
+              <p>Our paper presents an end-to-end approach that leverages single-view RGB images for estimating an ordered list of 3D key-point.</p>
             </td>
           </tr>
 
