Book link updated to Springer
Book link updated to Springer.

Changes to be committed:
      modified:   index.html

--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-							<a href="http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008" target="_blank">
+							<!--<a href="http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008" target="_blank"> -->
+                                                        <a href="https://link.springer.com/book/10.1007/978-3-031-02591-4" target="_blank">
                 <papertitle>Digital Heritage Reconstruction Using Super-resolution and Inpainting</papertitle>
               </a>
               <br>
@@ -241,7 +242,7 @@
 	      <a href="https://www.linkedin.com/in/nilay-khatri-b226602b">Nilay L. Khatri</a>
 			  <br>
               <em>Book</em>, Dec. 2016 (<a href="https://www.morganclaypool.com/toc/vcp/8/8" target="_blank">Synthesis Lectures on Visual Computing</a>)
-			  <br> Morgan & Claypool Publishers 
+			  <br> Springer Nature (origianlly published by Morgan & Claypool Publishers)
               <p></p>
               <p>Our book presents image super-resolution methods and techniques for automatically detecting and inpainting damaged regions in heritage monuments, in order to provide an enhanced visual experience.</p>
             </td>
